--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header{
 }
 .menu-list li{
     font-size: 15px;
-    background-color: #9af7d8;
+    background-color: rgb(240, 237, 44, 0.7);
     margin-left: 10px;
     margin-right:10px;
     border-radius: 5px;
@@ -50,13 +50,13 @@ header{
 }
 .menu-list li a{
     text-decoration: none;
-    color: #181717;
+    color: rgb(0, 0, 0 , 0.8);
     font-family: 'Alfa Slab One';
     font-weight: 400;
     transition: color 0.3s ease;
 }
 .menu-list li a:hover{
-    color: #9af7d8;
+    color: rgb(240, 237, 44, 0.7);
 }
 
 .iconimage img{
@@ -66,17 +66,17 @@ header{
 }
 
 .socialarea{
-    background-color: #2cf0af;
+    background-color: rgb(240, 237, 44, 0.7);
     display: inline-block;
     position: fixed;
     right: 1px;
-    top: 40%;
+    bottom: 35%;
     padding: 5px;
 }
 
 .sociallink a{
     text-decoration: none;
-
+    margin-top: 2px;
 }
 
     
@@ -107,7 +107,7 @@ footer {
 }
 
 .footer-content {
-      color: rgb(243, 241, 94); 
+      color: rgb(240, 237, 44, 0.7); 
 }
 
 footer p {
